# cpp-utils

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  util.cpp  util.hpp
